--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "sweetalert2": "^11.7.8",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
-    "vue-sweetalert2": "^5.0.5"
+    "vue-sweetalert2": "^5.0.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
