--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
+    "oh-vue-icons": "^1.0.0-rc3",
     "sweetalert2": "^11.7.8",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
